[package]
name = "gtk-blueprint"
description = "Use Blueprint in Rust GTK applications"
version = "0.2.0"
repository = "https://github.com/Megadash452/gtk-blueprint"
readme = "README.md"
license = "GPL-3.0"
keywords = ["gtk", "blueprint"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2"
phf = { version = "0.11.3", default-features = false, optional = true }
phf_codegen = "0.11.3"

[features]
default = ["compiled-map"]
compiled-map = ["dep:phf"]
