[package]
name = "gtk-blueprint"
description = "Use Blueprint in Rust GTK applications"
version = "0.2.0"
repository = "https://github.com/Megadash452/gtk-blueprint"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["gtk", "blueprint"]
edition = "2021"

[dependencies]
gtk-blueprint-macros = { path = "macros" }
phf = { version = "0.11.3", default-features = false, optional = true }

[features]
default = ["compiled-map"]
compiled-map = ["dep:phf", "gtk-blueprint-macros/compiled-map"]
